--- a/library.properties
+++ b/library.properties
@@ -2,8 +2,8 @@ name=NOKIA5110_TEXT
 version=1.0.0
 author=Gavin Lyons <glyons66@hotmail.com>
 maintainer=Gavin Lyons <glyons66@hotmail.com>
-sentence=NOKIA5110_TEXT is a small library to displays ASCII text on Nokia 5110 LCD
-paragraph=It displays Text only and is desigend for low memory.
+sentence=NOKIA5110_TEXT is a small library to display ASCII text on Nokia 5110 LCD PCD8544 controller.
+paragraph=It displays Ascii Text only and is designed for low memory footprint. 
 category=Display
 url=https://github.com/gavinlyonsrepo/NOKIA5110_TEXT
 architectures=*
