--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=NOKIA5110_TEXT
-version=1.0.1
+version=1.1.0
 author=Gavin Lyons <glyons66@hotmail.com>
 maintainer=Gavin Lyons <glyons66@hotmail.com>
-sentence=NOKIA5110_TEXT is a small library to display ASCII text on Nokia 5110 LCD PCD8544 controller.
-paragraph=It displays Ascii Text only and is designed for low memory footprint. 
+sentence=NOKIA5110_TEXT is a library to display ASCII text on Nokia 5110 LCD PCD8544 controller.
+paragraph=It displays ASCII Text and is designed for low memory footprint. (12*6) 72 characters in total, Sleep mode included.
 category=Display
 url=https://github.com/gavinlyonsrepo/NOKIA5110_TEXT
 architectures=*
