--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=NOKIA5110_TEXT
-version=1.2.1
+version=1.3.0
 author=Gavin Lyons <glyons66@hotmail.com>
 maintainer=Gavin Lyons <glyons66@hotmail.com>
 sentence=NOKIA5110_TEXT is a light-weight library to display ASCII text on Nokia 5110 LCD PCD8544 controller.
-paragraph=It displays ASCII Text and is designed for low memory footprint. (12*6) 72 characters in total, Sleep mode included. 3 fonts, Inverse mode, contrast and bias control. 
+paragraph=It displays ASCII Text and is designed for low memory footprint. (16X6) 96 characters can be displayed with smallest font, Sleep mode included. 6 fonts, Inverse mode, contrast and bias control. Basic Graphics.
 category=Display
 url=https://github.com/gavinlyonsrepo/NOKIA5110_TEXT
 architectures=*
