--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=NOKIA5110_TEXT
-version=2.1.0
+version=2.2.0
 author=Gavin Lyons <glyons66@hotmail.com>
 maintainer=Gavin Lyons <glyons66@hotmail.com>
 sentence=NOKIA5110_TEXT is a light-weight library to display ASCII text on Nokia 5110 LCD PCD8544 controller.
-paragraph=It displays ASCII Text and is designed for low memory footprint. 96 characters can be displayed with smallest font, Sleep mode included. 9 optional fonts of various sizes, Inverse mode, contrast and bias control. Custom character and bitmap display, Basic Graphics.
+paragraph=It displays ASCII Text and is designed for low memory footprint. 96 characters can be displayed with smallest font. Five characters can be displayed with largest font.  Sleep mode included. 9 optional fonts of various sizes and styles, Inverse mode, contrast and bias control. Custom characters and bitmap display, Basic Graphics. Hardware or Software SPI. 
 category=Display
 url=https://github.com/gavinlyonsrepo/NOKIA5110_TEXT
 architectures=*
